--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
   "dependencies": {
     "react": "16.7.0",
     "react-dom": "16.7.0",
-    "react-native": "0.57.8",
-    "react-native-web": "0.10.0-alpha.3",
+    "react-native": "0.58.3",
+    "react-native-web": "0.10.0",
     "react-scripts": "2.1.3"
   },
   "devDependencies": {
     "@types/jest": "23.3.13",
-    "@types/react": "16.7.21",
+    "@types/react": "16.7.22",
     "@types/react-native": "0.57.32",
     "@types/react-test-renderer": "16.0.3",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
-    "prettier": "1.16.1",
+    "prettier": "1.16.3",
     "react-art": "16.7.0",
     "react-test-renderer": "16.7.0",
     "ts-jest": "23.10.5",
     "tslint": "5.12.1",
     "tslint-config-prettier": "1.17.0",
-    "typescript": "3.2.4"
+    "typescript": "3.3.1"
   },
   "babel": {
     "presets": [
