--- a/package.json
+++ b/package.json
@@ -9,29 +9,30 @@
     "android": "react-native run-android",
     "test": "jest --coverage",
     "watch": "jest --watch",
-    "lint": "tsc && tslint --fix -p tsconfig.json -c tslint.json"
+    "lint": "tsc && tslint --fix -p tsconfig.json -c tslint.json",
+    "reset": "watchman watch-del-all; rm -rf /tmp/metro-bundler-cache-*; rm -rf ./android/build; rm -rf ./android/.gradle; rm -rf ./android/app/build; rm -rf ~/Library/Developer/Xcode/DerivedData; rm -rf /tmp/haste-map-react-native-packager-*; rm -rf ./ios/build; yarn install; pod install --project-directory=ios; react-native start --reset-cache"
   },
   "dependencies": {
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
-    "react-native": "0.58.3",
-    "react-native-web": "0.10.0",
-    "react-scripts": "2.1.3"
+    "react": "16.8.4",
+    "react-dom": "16.8.4",
+    "react-native": "0.59.1",
+    "react-native-web": "0.11.1",
+    "react-scripts": "2.1.8"
   },
   "devDependencies": {
-    "@types/jest": "23.3.13",
-    "@types/react": "16.8.1",
-    "@types/react-native": "0.57.32",
-    "@types/react-test-renderer": "16.0.3",
+    "@types/jest": "24.0.11",
+    "@types/react": "16.8.8",
+    "@types/react-native": "0.57.40",
+    "@types/react-test-renderer": "16.8.1",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
-    "prettier": "1.16.3",
-    "react-art": "16.7.0",
-    "react-test-renderer": "16.7.0",
-    "ts-jest": "23.10.5",
-    "tslint": "5.12.1",
-    "tslint-config-prettier": "1.17.0",
-    "typescript": "3.3.1"
+    "prettier": "1.16.4",
+    "react-art": "16.8.4",
+    "react-test-renderer": "16.8.4",
+    "ts-jest": "24.0.0",
+    "tslint": "5.14.0",
+    "tslint-config-prettier": "1.18.0",
+    "typescript": "3.3.3333"
   },
   "babel": {
     "presets": [
@@ -46,15 +47,6 @@
     },
     "transformIgnorePatterns": [
       "node_modules/(?!react-native|react-router-native)/"
-    ],
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
     ],
     "globals": {
       "window": true,
