--- a/package.json
+++ b/package.json
@@ -15,24 +15,24 @@
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-native": "0.59.3",
+    "react-native": "0.59.5",
     "react-native-web": "0.11.2",
     "react-scripts": "2.1.8"
   },
   "devDependencies": {
     "@types/jest": "24.0.11",
-    "@types/react": "16.8.10",
-    "@types/react-native": "0.57.42",
+    "@types/react": "16.8.14",
+    "@types/react-native": "0.57.47",
     "@types/react-test-renderer": "16.8.1",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
-    "prettier": "1.16.4",
+    "prettier": "1.17.0",
     "react-art": "16.8.6",
     "react-test-renderer": "16.8.6",
-    "ts-jest": "24.0.1",
-    "tslint": "5.15.0",
+    "ts-jest": "24.0.2",
+    "tslint": "5.16.0",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "3.4.1"
+    "typescript": "3.4.4"
   },
   "babel": {
     "presets": [
@@ -47,6 +47,16 @@
     },
     "transformIgnorePatterns": [
       "node_modules/(?!react-native|react-router-native)/"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.[jt]s?(x)"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
     ],
     "globals": {
       "window": true,
