--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,10 @@ build/
 local.properties
 *.iml
 
+# Visual Studio Code
+#
+.vscode/
+
 # node.js
 #
 node_modules/
@@ -37,12 +41,18 @@ npm-debug.log
 yarn-error.log
 
 # BUCK
+#
 buck-out/
 \.buckd/
 *.keystore
 
 # fastlane
 #
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
+
 */fastlane/report.xml
 */fastlane/Preview.html
 */fastlane/screenshots
@@ -51,7 +61,12 @@ buck-out/
 #
 *.jsbundle
 
-# Tests
+# CocoaPods
+#
+/ios/Pods/
 
-.jest/
+
+# Custom
+# 
 coverage/
+build/
