--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-project.xcworkspace
 
 # Android/IntelliJ
 #
@@ -30,10 +29,6 @@ build/
 local.properties
 *.iml
 
-# Visual Studio Code
-#
-.vscode/
-
 # node.js
 #
 node_modules/
@@ -41,10 +36,10 @@ npm-debug.log
 yarn-error.log
 
 # BUCK
-#
 buck-out/
 \.buckd/
 *.keystore
+!debug.keystore
 
 # fastlane
 #
@@ -58,15 +53,10 @@ buck-out/
 */fastlane/screenshots
 
 # Bundle artifact
-#
 *.jsbundle
 
 # CocoaPods
-#
 /ios/Pods/
 
-
-# Custom
-# 
+.eslintcache
 coverage/
-build/
