--- a/package.json
+++ b/package.json
@@ -14,29 +14,30 @@
     "reset": "watchman watch-del-all; rm -rf /tmp/metro-bundler-cache-*; rm -rf ./android/build; rm -rf ./android/.gradle; rm -rf ./android/app/build; rm -rf ~/Library/Developer/Xcode/DerivedData; rm -rf /tmp/haste-map-react-native-packager-*; rm -rf ./ios/build; jest --clearCache; cd ios; pod install --repo-update; cd ..; npx jetify; cd android; ./gradlew clean; cd ..; react-native start --reset-cache"
   },
   "dependencies": {
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "0.60.5",
-    "react-native-web": "0.11.7",
-    "react-scripts": "3.1.1"
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.6.1",
+    "@react-navigation/stack": "^5.6.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-native": "0.63.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.7",
+    "react-native-screens": "^2.9.0",
+    "react-native-web": "^0.13.3",
+    "react-scripts": "^3.4.1"
   },
   "devDependencies": {
-    "@babel/core": "7.5.5",
-    "@babel/runtime": "7.5.5",
-    "@react-native-community/eslint-config": "0.0.5",
-    "@types/jest": "24.0.18",
-    "@types/react": "16.9.2",
-    "@types/react-native": "0.60.7",
-    "@types/react-test-renderer": "16.9.0",
-    "@typescript-eslint/parser": "^2.0.0",
-    "babel-jest": "24.9.0",
-    "eslint": "6.2.1",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react-hooks": "^2.0.1",
-    "metro-react-native-babel-preset": "0.56.0",
-    "react-test-renderer": "16.9.0",
-    "typescript": "3.5.3"
+    "@babel/core": "^7.10.4",
+    "@babel/runtime": "^7.10.4",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^26.0.4",
+    "@types/react": "^16.9.41",
+    "@types/react-native": "^0.62.17",
+    "@types/react-test-renderer": "^16.9.2",
+    "metro-react-native-babel-preset": "^0.60.0",
+    "react-test-renderer": "16.13.1",
+    "typescript": "^3.9.6"
   },
   "jest": {
     "preset": "react-native",
